Added surefire plugin for paraller tests