@@ -108,6 +108,16 @@
 					<outputDirectory>${project.build.directory}/${dependencies.path}</outputDirectory>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.16</version>
+				<configuration>
+					<forkCount>4</forkCount>
+					<reuseForks>true</reuseForks>
+					<!-- <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine> -->
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
